# backend_project

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: main.py  models.py
backend_project/: settings.py  urls.py
fastapi_app/: apps.py  urls.py  views.py
